# FlowerStockExchange

./: AllTrees.h  BuyHandler.cpp  BuyHandler.h  CMakeLists.txt  LowLevel.pro  Readme.md  RedBlackTree.cpp  RedBlackTree.h  ValidateOrder.cpp  dependencies.sh  login.cpp  login.h  login.ui  main.cpp  mainrun.cpp  mainrun.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  myHelp.txt  order.csv  order.h  resources.qrc  sign_up.cpp  sign_up.h  sign_up.ui  splashscreen.cpp  splashscreen.h  splashscreen.ui  style.qss  test.pro  userdata.cpp  userdata.h
Authenticater/: CMakeLists.txt  login.cpp  login.h  main.cpp  signup.cpp  signup.h  tokenValidator.cpp  tokenValidator.h  utils.cpp  utils.h
Backend/: AllTrees.h  BuyHandler.cpp  BuyHandler.h  CMakeLists.txt  Cache.cpp  Cache.h  HandlerLogic.cpp  HandlerLogic.h  RedBlackTree.cpp  RedBlackTree.h  SellHandler.cpp  SellHandler.h  ValidateOrder.cpp  ValidateOrder.h  count.h  databaseDetails.h  getHistory.cpp  getHistory.h  handleOrder.cpp  handleOrder.h  main.cpp  order.cpp  order.csv  order.h  processOrder.cpp  processOrder.h
lowLevelArc/: BuyHandler.cpp  CMakeLists.txt  Cache.cpp  Cache.h  ValidateOrder.cpp  execution_rep.csv  main.cpp  order.cpp  order.csv  order.h  out
untitled/: main.cpp
